# tuscany-sca

./: BUILDING.txt  GettingStarted.html  Makefile.am  NOTICE  README  README.txt  SCA_Java_Tools_documentation.html  architecture.html  bugs.html  build.bat  build.sh  build.xml  build_sdocpp.sh  builddist.bat  builddist.sh  configure.ac  cvs-usage.html  dependencies.html  documentation.html  documentationdasjava.html  documentationscacpp.html  documentationscajava.html  documentationsdocpp.html  documentationsdojava.html  download.html  downloads.html  exception_handling.html  faq.html  getinvolved.html  howtobuildsite.html  index.html  install.html  installcpp.html  installjava.html  issue-tracking.html  mail-lists.html  makebindist.sh  maven-reports.html  maven-site.vm  news.html  (+16 more)
archetypes/: pom.xml
architecture/: tuscany.architecture.ppt
demos/: pom.xml
distribution/: pom.xml
doc/: BuildingSTDCXX.html  CommittersGuide.txt  DesignNotes.htm
features/: pom.xml
image-sources/: Labels.xcf  Logo.xcf
itest/: pom.xml
modules/: pom.xml
rdb/: pom.xml
samples/: GettingStarted.html  Makefile.am  Readme.htm  build.sh  build.xml  configure.ac  pom.xml  readme.htm
site-author/: DropMenu.js  Releases.xml  building_source.xml  codeguidelines.xml  cpp-projects.xml  cpp_getting_started_m1.xml  cpp_getting_started_sdo_m1.xml  cpp_sca_overview.xml  cpp_sdo_overview.xml  cpp_setup_linux.xml  cpp_setup_win.xml  das_documentation.xml  das_downloads.xml  das_index.xml  das_releases.xml  documentation.xml  downloads.xml  faq.xml  get-involved.xml  getting_started.xml  index-cpp.xml  index-java.xml  issue-tracking.xml  java-projects.xml  java_das_overview.xml  java_sca_overview.xml  java_sdo_overview.xml  license.xml  mail-lists.xml  maven.xml  monitoring.htm  news.xml  patches.xml  quicksubversion.xml  sca-binding.xml  sca-component.xml  sca-composite.xml  sca-implementation.xml  sca-interface.xml  sca-property.xml  (+15 more)
site-publish/: Releases.html  building_source.html  codeguidelines.html  cpp-projects.html  cpp_getting_started_m1.html  cpp_getting_started_sdo_m1.html  cpp_sca_overview.html  cpp_sdo_overview.html  cpp_setup_linux.html  cpp_setup_win.html  das_documentation.html  das_downloads.html  das_index.html  das_releases.html  documentation.html  downloads.html  faq.html  get-involved.html  getting_started.html  index-cpp.html  index-java.html  index.html  issue-tracking.html  java-projects.html  java_das_overview.html  java_sca_overview.html  java_sdo_overview.html  license.html  mail-lists.html  maven.html  news.html  patches.html  quicksubversion.html  sca-binding.html  sca-component.html  sca-composite.html  sca-implementation.html  sca-interface.html  sca-property.html  sca-reference.html  (+13 more)
style/: maven-base.css  maven-classic.css  maven-theme.css
tools/: pom.xml
tutorial/: pom.xml
vtest/: pom.xml
(+2246 files in other folders)
